// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the rkeeper api basic functionality Test full rkeeper product handling - not not existing unit 1`] = `[Error: Cannot find unit belonging to external unit id NOT EXISTING RESTAURANT]`;

exports[`Test the rkeeper api basic functionality Test the menusync handler 1`] = `[InvalidBucketName: The specified bucket is not valid.]`;

exports[`Test the rkeeper api basic functionality getBusinessEntityInfo - existing restaurant 1`] = `
Object {
  "unitId": "rkeeper-cf0d1110-a2ce-45cf-aa69-6782bbc44cad-unit",
}
`;

exports[`Test the rkeeper api basic functionality getBusinessEntityInfo - not existing restaurant 1`] = `[Error: Cannot find unit belonging to external unit id NOT EXISTING RESTO\`]`;

exports[`test the order status route 1`] = `
Object {
  "message": "Internal server error",
}
`;
